# R-Telecom

./: .gitignore  LICENSE  README.md  pyproject.toml
rostelecom_bot/: main.py  some_logic.py
rostelecom_bot/handlers/: common_handlers.py  inline_reg_handlers.py  log_dispatcher.py
rostelecom_bot/logic/: bot_obj.py  crud.py
rostelecom_bot/utils/: async_func.py  botcommands.py  config.py  keyboard.py  phrases.py  states_obj.py
